Hotfix wijzig button naam naar NFR5 Kleur bewaren

--- a/Grocery.App/Views/ChangeColorView.xaml
+++ b/Grocery.App/Views/ChangeColorView.xaml
@@ -12,7 +12,7 @@
     </Shell.TitleView>
 
     <VerticalStackLayout>
-        <Editor Text="{Binding GroceryList.Color}" x:Name="newColor"/>
-        <Button Text="wijzig kleur" Command="{Binding ChangeColorCommand}" CommandParameter="{Binding Source={x:Reference newColor}, Path=Text}" />
+        <Editor Text="{Binding GroceryList.Color}" x:Name="NewColor"/>
+        <Button Text="Kleur bewaren" Command="{Binding ChangeColorCommand}" CommandParameter="{Binding Source={x:Reference NewColor}, Path=Text}" />
     </VerticalStackLayout>
 </ContentPage>
